// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/list-stage-changes/workable ListStageChanges when specified candidate does exist performs correctly 1`] = `
Ok {
  "value": Object {
    "changes": Array [
      Object {
        "createdAt": "2022-08-26T03:36:48.612Z",
        "current": false,
        "id": "26e95b86",
        "name": "Applied",
        "stageId": "applied",
      },
      Object {
        "createdAt": "2022-08-30T03:37:28.560Z",
        "current": false,
        "id": "26e95b9a",
        "name": "Phone Screen",
        "stageId": "phone-screen",
      },
      Object {
        "createdAt": "2022-09-03T03:39:36.565Z",
        "current": true,
        "id": "26e95bdb",
        "name": "Assessment",
        "stageId": "assessment",
      },
    ],
    "rateLimit": Object {
      "bucket": "workable",
      "remainingRequests": 9,
      "remainingRequestsPercentage": 90,
      "resetTimestamp": 1671629750,
      "totalRequests": 10,
    },
  },
}
`;

exports[`recruitment/list-stage-changes/workable ListStageChanges when specified candidate does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get candidate by ID NOT-EXISTING. Check that the candidate with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[1].statements[0]
Original Map Location: Line 16, column 5",
}
`;

exports[`recruitment/list-stage-changes/workable ListStageChanges when specified subdomain does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get subdomain by name invalid-superface. Check that the subdomain with that name exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[0].statements[0]
Original Map Location: Line 9, column 5",
}
`;
